--- a/business.html
+++ b/business.html
@@ -390,18 +390,7 @@
 </head>
 <body>
   <!-- Sidebar Navigation -->
-  <nav class="sidebar">
-    <div class="sidebar-logo">
-      <h1>🚚 BizTrack</h1>
-    </div>
-    <ul class="sidebar-nav">
-      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="business.html" class="active"><i class="fas fa-briefcase"></i> For Businesses</a></li>
-      <li><a href="verify.html"><i class="fas fa-check-circle"></i> Verify Product</a></li>
-      <li><a href="pricing-public.html"><i class="fas fa-dollar-sign"></i> Pricing</a></li>
-      <li><a href="login.html"><i class="fas fa-user"></i> Login/Signup</a></li>
-    </ul>
-  </nav>
+  <div id="sidebar-container" data-page="business"></div>
 
   <!-- Main Content -->
   <main class="main-content">
@@ -589,7 +578,7 @@
         <h2>Ready to Prove Your Products Are Real?</h2>
         <p style="font-size: 1.25rem; margin-bottom: 2.5rem;">Join businesses building customer trust with verified product authenticity.</p>
         
-        <a href="pricing.html" class="btn btn-white" style="font-size: 1.25rem; padding: 1.25rem 2.5rem; margin-bottom: 1rem;">
+        <a href="pricing-hub.html" class="btn btn-white" style="font-size: 1.25rem; padding: 1.25rem 2.5rem; margin-bottom: 1rem;">
           <i class="fas fa-rocket"></i>
           Start at $49/month → 500 QR Codes
         </a>
@@ -630,5 +619,6 @@
     </div>
   </footer>
 
+  <script src="js/sidebar.js"></script>
 </body>
 </html>
