--- a/pricing-public.html
+++ b/pricing-public.html
@@ -276,12 +276,6 @@
         <p>Flexible pricing for businesses of all sizes</p>
       </div>
 
-      <!-- Free Tier Banner -->
-      <div class="free-tier-banner">
-        <h3>Start Free Today!</h3>
-        <p>We give you <strong>10 free QR codes</strong> when you sign up — no credit card required.</p>
-      </div>
-
       <!-- Pricing Grid -->
       <div class="pricing-grid">
        
@@ -353,11 +347,9 @@
       <!-- Footer Note -->
       <div class="footer-note">
         <p><strong>All plans include:</strong> Blockchain verification, IPFS storage, and QR code generation</p>
-        <p>Questions? <a href="mailto:biztrack.xrp@proton.me">Contact our team</a></p>
+        <p>Questions? <a href="/cdn-cgi/l/email-protection#74161d0e000615171f5a0c06043404061b001b1a5a1911">Contact our team</a></p>
       </div>
     </div>
   </main>
 
-  <script src="js/sidebar.js"></script>
-</body>
-</html>
+  <script d
