--- a/SI-pharma-pricing.html
+++ b/SI-pharma-pricing.html
@@ -113,7 +113,7 @@
       max-width: 1200px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 2rem;
       margin-bottom: 3rem;
     }
@@ -592,8 +592,7 @@
           'Custom analytics & recall dashboards',
           'Co-branded patient trust portal',
           'Onboarding & quarterly reviews'
-        ],
-        contactSales: true
+        ]
       }
     };
 
