--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -119,7 +119,7 @@
       max-width: 1200px;
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 2rem;
       margin-bottom: 3rem;
     }
@@ -439,9 +439,9 @@
           <li><i class="fas fa-check-circle"></i> Onboarding & quarterly reviews</li>
         </ul>
         
-        <a href="/cdn-cgi/l/email-protection#0c6e6576787e6d6f6722747e7c4c7c7e63786362226169337f796e66696f7831496278697e7c7e657f692c5c606d622c45627d79657e75" class="cta-button">
-          Contact Sales
-          <i class="fas fa-envelope"></i>
+        <a href="register.html?plan=pharma_enterprise&price=5000" class="cta-button">
+          Get Started
+          <i class="fas fa-arrow-right"></i>
         </a>
       </div>
 
@@ -476,9 +476,9 @@
       <p style="color: #64748b; margin-bottom: 0;">Our pharmaceutical compliance experts are here to help</p>
       
       <div class="contact-links">
-        <a href="/cdn-cgi/l/email-protection#95f7fcefe1e7f4f6febbede7e5d5e5e7fae1fafbbbf8f0" class="contact-link">
+        <a href="mailto:zach@biztrack.io" class="contact-link">
           <i class="fas fa-envelope"></i>
-          <span class="__cf_email__" data-cfemail="97f5feede3e5f6f4fcb9efe5e7d7e7e5f8e3f8f9b9faf2">[email&#160;protected]</span>
+          zach@biztrack.io
         </a>
         <a href="tel:+13606700852" class="contact-link">
           <i class="fas fa-phone"></i>
