--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -131,6 +131,8 @@
       border: 3px solid #e2e8f0;
       transition: all 0.3s;
       position: relative;
+      display: flex;
+      flex-direction: column;
     }
 
     .pricing-tier:hover {
@@ -187,6 +189,7 @@
     .tier-features {
       list-style: none;
       margin-bottom: 2rem;
+      flex-grow: 1;
     }
 
     .tier-features li {
