--- a/register.html
+++ b/register.html
@@ -23,6 +23,36 @@
       align-items: center;
       justify-content: center;
       padding: 2rem;
+      position: relative;
+    }
+
+    .back-home {
+      position: fixed;
+      top: 2rem;
+      left: 2rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      padding: 0.75rem 1.5rem;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      transition: all 0.2s;
+      z-index: 100;
+    }
+
+    .back-home:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: translateX(-3px);
+    }
+
+    .back-home i {
+      font-size: 1.125rem;
     }
 
     .register-container {
@@ -68,17 +98,20 @@
     }
 
     .plan-badge {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+      background: rgba(59, 130, 246, 0.15);
+      color: #1e40af;
       padding: 0.75rem 1.5rem;
       border-radius: 12px;
       text-align: center;
       margin-bottom: 1.5rem;
       font-weight: 600;
+      border: 1px solid rgba(59, 130, 246, 0.3);
+      font-size: 0.95rem;
     }
 
     .plan-badge i {
       margin-right: 0.5rem;
+      color: #3b82f6;
     }
 
     .form-group {
@@ -216,6 +249,13 @@
     }
 
     @media (max-width: 500px) {
+      .back-home {
+        top: 1rem;
+        left: 1rem;
+        padding: 0.625rem 1rem;
+        font-size: 0.875rem;
+      }
+
       .register-container {
         padding: 2rem;
       }
@@ -231,6 +271,11 @@
   </style>
 </head>
 <body>
+  <a href="index.html" class="back-home">
+    <i class="fas fa-arrow-left"></i>
+    Back to Home
+  </a>
+
   <div class="register-container">
     <div class="logo">
       <h1><span class="logo-emoji">🚚</span> BizTrack</h1>
@@ -300,22 +345,8 @@
     const selectedPlan = urlParams.get('plan');
     const planPrice = urlParams.get('price');
 
-    // Show plan badge if plan is selected
-    if (selectedPlan && planPrice) {
-      const planBadge = document.getElementById('planBadge');
-      const planName = document.getElementById('planName');
-      
-      const planNames = {
-        'essential': 'Essential Plan - $49/month',
-        'scale': 'Scale Plan - $149/month',
-        'enterprise': 'Enterprise Plan - $499/month',
-        'compliance': 'Compliance Plan - $2,500/month',
-        'pharma_enterprise': 'Pharma Enterprise Plan - $5,000+/month'
-      };
-      
-      planName.textContent = planNames[selectedPlan] || `${selectedPlan} Plan - $${planPrice}/month`;
-      planBadge.style.display = 'block';
-    }
+    // Plan badge removed - users see pricing after registration
+    // No need to show pricing on registration form
 
     function showMessage(text, type = 'error') {
       const messageEl = document.getElementById('message');
