--- a/pricing-hub.html
+++ b/pricing-hub.html
@@ -145,6 +145,7 @@
       text-align: center;
       position: relative;
       overflow: hidden;
+      height: 100%;
     }
 
     .pricing-card::before {
@@ -202,6 +203,7 @@
       color: #64748b;
       margin-bottom: 1.5rem;
       line-height: 1.6;
+      flex-grow: 1;
     }
 
     .card-price {
@@ -222,6 +224,7 @@
       font-weight: 700;
       font-size: 1.125rem;
       transition: all 0.2s;
+      margin-top: auto;
     }
 
     .pricing-card:hover .card-cta {
@@ -385,9 +388,9 @@
       <p style="color: #64748b; margin-bottom: 0;">Our team is here to help you find the perfect plan for your business</p>
       
       <div class="contact-links">
-        <a href="/cdn-cgi/l/email-protection#8be9e2f1fff9eae8e0a5f3f9fbcbfbf9e4ffe4e5a5e6ee" class="contact-link">
+        <a href="mailto:zach@biztrack.io" class="contact-link">
           <i class="fas fa-envelope"></i>
-          <span class="__cf_email__" data-cfemail="93f1fae9e7e1f2f0f8bdebe1e3d3e3e1fce7fcfdbdfef6">[email&#160;protected]</span>
+          zach@biztrack.io
         </a>
         <a href="tel:+13606700852" class="contact-link">
           <i class="fas fa-phone"></i>
