--- a/pricing-public.html
+++ b/pricing-public.html
@@ -114,7 +114,7 @@
     /* Pricing Grid */
     .pricing-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 2rem;
       max-width: 1200px;
       margin: 0 auto 3rem;
@@ -347,7 +347,7 @@
       <!-- Footer Note -->
       <div class="footer-note">
         <p><strong>All plans include:</strong> Blockchain verification, IPFS storage, and QR code generation</p>
-        <p>Questions? <a href="/cdn-cgi/l/email-protection#74161d0e000615171f5a0c06043404061b001b1a5a1911">Contact our team</a></p>
+        <p>Questions? <a href="mailto:zach@biztrack.io">Contact our team</a></p>
       </div>
     </div>
   </main>
