--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -427,7 +427,7 @@
       <div class="pricing-tier popular">
         <div class="popular-badge">MOST POPULAR</div>
         <h2 class="tier-name">Enterprise</h2>
-        <div class="tier-price">$5,000<span>+ / month</span></div>
+        <div class="tier-price">$5,000<span> / month</span></div>
         <div class="tier-volume">50,000+ QR codes per month</div>
         
         <ul class="tier-features">
