--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -502,6 +502,6 @@
     </div>
   </footer>
 
-  <script src="js/sidebar.js"></script>
+  <script src="js/SI-sidebar.js"></script>
 </body>
 </html>
