--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -881,9 +881,9 @@
       <p style="color: #64748b; margin-bottom: 0;">Need help choosing a plan? We're here to help.</p>
       
       <div class="contact-links">
-        <a href="mailto:zach@biztrack.io" class="contact-link">
+        <a href="/cdn-cgi/l/email-protection#1862797b70587a71626c6a797b73367177" class="contact-link">
           <i class="fas fa-envelope"></i>
-          zach@biztrack.io
+          <span class="__cf_email__" data-cfemail="b4ced5d7dcf4d6ddcec0c6d5d7df9adddb">[email&#160;protected]</span>
         </a>
       </div>
       <p style="color: #94a3b8; font-size: 0.875rem; margin-top: 1rem;">
