--- a/pricing-hub.html
+++ b/pricing-hub.html
@@ -373,7 +373,7 @@
         <p class="card-subtitle">
           For wholesalers, distributors, and manufacturers requiring DSCSA compliance
         </p>
-        <div class="card-price">From $2,500/month</div>
+        <div class="card-price">From $199/month</div>
         <div class="card-cta">
           View Plans
           <i class="fas fa-arrow-right"></i>
@@ -388,9 +388,9 @@
       <p style="color: #64748b; margin-bottom: 0;">Our team is here to help you find the perfect plan for your business</p>
       
       <div class="contact-links">
-        <a href="mailto:zach@biztrack.io" class="contact-link">
+        <a href="mailto:info@biztrack.io" class="contact-link">
           <i class="fas fa-envelope"></i>
-          zach@biztrack.io
+          info@biztrack.io
         </a>
         <a href="tel:+13606700852" class="contact-link">
           <i class="fas fa-phone"></i>
